--- a/OBeautifulCode.Libs.Reflection.Test/OBeautifulCode.Libs.Reflection.Test.csproj
+++ b/OBeautifulCode.Libs.Reflection.Test/OBeautifulCode.Libs.Reflection.Test.csproj
@@ -52,6 +52,9 @@
   <ItemGroup>
     <Compile Include="AssemblyHelperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionHelperTest.cs" />
+    <Compile Include="ReflectionHelperTestChild.cs" />
+    <Compile Include="ReflectionHelperTestParent.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OBeautifulCode.Libs.Reflection\OBeautifulCode.Libs.Reflection.csproj">
@@ -65,6 +68,9 @@
   <ItemGroup>
     <EmbeddedResource Include="EmbeddedIcon.ico" />
     <EmbeddedResource Include="EmbeddedTextFile.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
