--- a/OBeautifulCode.Libs.Reflection/OBeautifulCode.Libs.Reflection.csproj
+++ b/OBeautifulCode.Libs.Reflection/OBeautifulCode.Libs.Reflection.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="AssemblyHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
