--- a/OBeautifulCode.Reflection.Test/packages.config
+++ b/OBeautifulCode.Reflection.Test/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="3.49.1" targetFramework="net45" />
+  <package id="Conditions" version="2.1.0" targetFramework="net45" />
+  <package id="FakeItEasy" version="2.2.0" targetFramework="net45" />
   <package id="FluentAssertions" version="4.13.0" targetFramework="net45" />
+  <package id="OBeautifulCode.AutoFakeItEasy" version="1.0.54.0" targetFramework="net45" />
+  <package id="OBeautifulCode.Math" version="1.0.30" targetFramework="net45" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
