--- a/OBeautifulCode.Reflection.Test/OBeautifulCode.Reflection.Test.csproj
+++ b/OBeautifulCode.Reflection.Test/OBeautifulCode.Reflection.Test.csproj
@@ -94,7 +94,10 @@
   <ItemGroup>
     <Compile Include="AssemblyHelperTest.cs" />
     <Compile Include="AutoFakeItEasyBootstrapper.cs" />
+    <Compile Include="Child.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionHelperTest.cs" />
+    <Compile Include="Parent.cs" />
     <Compile Include="TypeDescriptionExtensionsTest.cs" />
     <Compile Include="TypeDescriptionTest.cs" />
   </ItemGroup>
