--- a/OBeautifulCode.Reflection/OBeautifulCode.Reflection.csproj
+++ b/OBeautifulCode.Reflection/OBeautifulCode.Reflection.csproj
@@ -51,6 +51,7 @@
     <Compile Include="AssemblyHelper.cs" />
     <Compile Include="CompressionMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionHelper.cs" />
     <Compile Include="TypeDescription.cs" />
     <Compile Include="TypeDescriptionExtensions.cs" />
   </ItemGroup>
