Added constructor to TypeDescription and cleaned up equality logic.  Added an extension method to resolve a TypeDescription from loaded types.  Added TypeMatchStrategy and TypeComparer as well.

--- a/OBeautifulCode.Reflection.Test/OBeautifulCode.Reflection.Test.csproj
+++ b/OBeautifulCode.Reflection.Test/OBeautifulCode.Reflection.Test.csproj
@@ -99,6 +99,7 @@
     <Compile Include="ReflectionHelperTest.cs" />
     <Compile Include="Parent.cs" />
     <Compile Include="TypeDescriptionExtensionsTest.cs" />
+    <Compile Include="TypeComparerTests.cs" />
     <Compile Include="TypeDescriptionTest.cs" />
   </ItemGroup>
   <ItemGroup>
