--- a/OBeautifulCode.Reflection/OBeautifulCode.Reflection.csproj
+++ b/OBeautifulCode.Reflection/OBeautifulCode.Reflection.csproj
@@ -48,11 +48,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include=".OBeautifulCode.Recipes\OBeautifulCode.Math\HashCodeHelper.cs" />
     <Compile Include="AssemblyHelper.cs" />
     <Compile Include="CompressionMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionHelper.cs" />
     <Compile Include="TypeDescription.cs" />
+    <Compile Include="TypeMatchStrategy.cs" />
+    <Compile Include="TypeComparer.cs" />
     <Compile Include="TypeDescriptionExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
