--- a/OBeautifulCode.Reflection/packages.config
+++ b/OBeautifulCode.Reflection/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="OBeautifulCode.Math.HashCodeHelper" version="1.0.52" targetFramework="net45" developmentDependency="true" />
+  <package id="Spritely.Recipes.MustValidation" version="0.6.2" targetFramework="net45" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
 </packages>
