--- a/OBeautifulCode.Reflection/OBeautifulCode.Reflection.csproj
+++ b/OBeautifulCode.Reflection/OBeautifulCode.Reflection.csproj
@@ -51,7 +51,11 @@
     <Compile Include="AssemblyHelper.cs" />
     <Compile Include="CompressionMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionHelper.Attribute.cs" />
     <Compile Include="ReflectionHelper.cs" />
+    <Compile Include="ReflectionHelper.Enum.cs" />
+    <Compile Include="ReflectionHelper.Field.cs" />
+    <Compile Include="ReflectionHelper.Property.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OBeautifulCode.Reflection.AssemblyHelper.recipe-nuspec" />
