Updated to the new analyzer model.  Added new method to AssemblyHelper to get the codebase not as a Uri.  Moved all the namespaces to OBC.Reflection.Recipes to be inline with the standard (also updated package IDs).  Added new recipe to with AssemblyLoader to load a directory of assemblies and handle all dependant dll loading issues associated with that.

--- a/OBeautifulCode.Reflection/packages.config
+++ b/OBeautifulCode.Reflection/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="OBeautifulCode.Build.Analyzers" version="1.0.9-stylecopprerelease" targetFramework="net45" developmentDependency="true" />
   <package id="OBeautifulCode.Enum.EnumExtensions" version="1.0.3" targetFramework="net45" developmentDependency="true" />
   <package id="Spritely.Recipes.MustValidation" version="0.6.2" targetFramework="net45" developmentDependency="true" />
-  <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
+  <package id="StyleCop.Analyzers" version="1.1.0-beta004" targetFramework="net45" developmentDependency="true" />
 </packages>
