--- a/OBeautifulCode.Reflection.Test/packages.config
+++ b/OBeautifulCode.Reflection.Test/packages.config
@@ -4,8 +4,9 @@
   <package id="FakeItEasy" version="2.3.3" targetFramework="net45" />
   <package id="FluentAssertions" version="4.18.0" targetFramework="net45" />
   <package id="OBeautifulCode.AutoFakeItEasy" version="1.0.84" targetFramework="net45" />
+  <package id="OBeautifulCode.Build.Analyzers" version="1.0.9-stylecopprerelease" targetFramework="net45" developmentDependency="true" />
   <package id="OBeautifulCode.Math" version="1.0.30" targetFramework="net45" />
-  <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
+  <package id="StyleCop.Analyzers" version="1.1.0-beta004" targetFramework="net45" developmentDependency="true" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
