--- a/OBeautifulCode.Reflection/OBeautifulCode.Reflection.csproj
+++ b/OBeautifulCode.Reflection/OBeautifulCode.Reflection.csproj
@@ -9,8 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OBeautifulCode.Reflection</RootNamespace>
     <AssemblyName>OBeautifulCode.Reflection</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -23,7 +26,8 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DocumentationFile>bin\Debug\OBeautifulCode.Reflection.XML</DocumentationFile>
     <RunCodeAnalysis>true</RunCodeAnalysis>
-    <CodeAnalysisRuleSet>..\common\analyzers.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>
+    </CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -35,7 +39,8 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DocumentationFile>bin\Release\OBeautifulCode.Reflection.XML</DocumentationFile>
     <RunCodeAnalysis>true</RunCodeAnalysis>
-    <CodeAnalysisRuleSet>..\common\analyzers.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>
+    </CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -51,7 +56,9 @@
     <Compile Include=".Spritely.Recipes\MustValidation\ValidatedNotNullAttribute.cs" />
     <Compile Include="AssemblyHelper.cs" />
     <Compile Include="CompressionMethod.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AssemblyLoader.cs" />
     <Compile Include="ReflectionHelper.Attribute.cs" />
     <Compile Include="ReflectionHelper.cs" />
     <Compile Include="ReflectionHelper.Enum.cs" />
@@ -59,27 +66,26 @@
     <Compile Include="ReflectionHelper.Property.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="OBeautifulCode.Reflection.AssemblyHelper.recipe-nuspec" />
-    <None Include="OBeautifulCode.Reflection.template-nuspec" />
-    <None Include="OBeautifulCode.Reflection.ReflectionHelper.recipe-nuspec" />
+    <AdditionalFiles Include=".analyzers\stylecop.json" />
+    <None Include=".analyzers\release.ruleset" />
+    <None Include="OBeautifulCode.Reflection.Recipes.AssemblyHelper.recipe-nuspec" />
+    <None Include="OBeautifulCode.Reflection.Recipes.AssemblyLoader.recipe-nuspec">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="OBeautifulCode.Reflection.Recipes.ReflectionHelper.recipe-nuspec" />
     <None Include="packages.config" />
-    <AdditionalFiles Include="..\common\stylecop.json">
-      <Link>stylecop.json</Link>
-      <InProject>false</InProject>
-    </AdditionalFiles>
   </ItemGroup>
   <ItemGroup>
-    <CodeAnalysisDictionary Include="..\common\codeanalysis-dictionary.xml">
-      <Link>codeanalysis-dictionary.xml</Link>
-      <InProject>false</InProject>
-    </CodeAnalysisDictionary>
-  </ItemGroup>
-  <ItemGroup>
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\Newtonsoft.Json.dll" />
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
-    <Analyzer Include="..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
+    <Content Include=".analyzers\dictionary.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\OBeautifulCode.Build.Analyzers.1.0.9-stylecopprerelease\build\OBeautifulCode.Build.Analyzers.targets" Condition="Exists('..\packages\OBeautifulCode.Build.Analyzers.1.0.9-stylecopprerelease\build\OBeautifulCode.Build.Analyzers.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\OBeautifulCode.Build.Analyzers.1.0.9-stylecopprerelease\build\OBeautifulCode.Build.Analyzers.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\OBeautifulCode.Build.Analyzers.1.0.9-stylecopprerelease\build\OBeautifulCode.Build.Analyzers.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
