--- a/OBeautifulCode.Reflection.Test/packages.config
+++ b/OBeautifulCode.Reflection.Test/packages.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Conditions" version="2.1.0" targetFramework="net45" />
-  <package id="FakeItEasy" version="2.3.3" targetFramework="net45" />
-  <package id="FluentAssertions" version="4.18.0" targetFramework="net45" />
-  <package id="OBeautifulCode.AutoFakeItEasy" version="1.0.84" targetFramework="net45" />
+  <package id="AutoFixture" version="3.51.0" targetFramework="net461" />
+  <package id="FakeItEasy" version="4.1.0" targetFramework="net461" />
+  <package id="FluentAssertions" version="4.19.4" targetFramework="net461" />
+  <package id="OBeautifulCode.AutoFakeItEasy" version="1.0.95" targetFramework="net461" />
   <package id="OBeautifulCode.Build.Analyzers" version="1.0.9-stylecopprerelease" targetFramework="net45" developmentDependency="true" />
-  <package id="OBeautifulCode.Math" version="1.0.30" targetFramework="net45" />
   <package id="StyleCop.Analyzers" version="1.1.0-beta004" targetFramework="net45" developmentDependency="true" />
-  <package id="xunit" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.core" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net45" />
-  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net45" />
+  <package id="xunit" version="2.3.0" targetFramework="net461" />
+  <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="xunit.analyzers" version="0.7.0" targetFramework="net461" />
+  <package id="xunit.assert" version="2.3.0" targetFramework="net461" />
+  <package id="xunit.core" version="2.3.0" targetFramework="net461" />
+  <package id="xunit.extensibility.core" version="2.3.0" targetFramework="net461" />
+  <package id="xunit.extensibility.execution" version="2.3.0" targetFramework="net461" />
 </packages>
