update build packages

--- a/OBeautifulCode.Reflection/packages.config
+++ b/OBeautifulCode.Reflection/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="OBeautifulCode.Build.Analyzers" version="1.1.15-prerelease" targetFramework="net462" developmentDependency="true" />
-  <package id="OBeautifulCode.Build.Conventions.ReSharper" version="1.1.15-prerelease" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Build.Analyzers" version="1.1.24" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Build.Conventions.ReSharper" version="1.1.24" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Collection.Recipes.EnumerableExtensions" version="1.0.30" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Enum.Recipes.EnumExtensions" version="1.0.15" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Math.Recipes.HashCodeHelper" version="1.0.70" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.String.Recipes.StringExtensions" version="1.0.40" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Validation.Recipes.ParameterValidator" version="1.0.25" targetFramework="net462" developmentDependency="true" />
-  <package id="StyleCop.Analyzers" version="1.1.0-beta007" targetFramework="net462" developmentDependency="true" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net462" developmentDependency="true" />
 </packages>
