added GetInterfaceDeclaredAndImplementedMethods() to ReflectionHelper, added PreconfiguredBindingFlags

--- a/OBeautifulCode.Reflection.Recipes.Test/OBeautifulCode.Reflection.Recipes.Test.csproj
+++ b/OBeautifulCode.Reflection.Recipes.Test/OBeautifulCode.Reflection.Recipes.Test.csproj
@@ -121,6 +121,8 @@
     <Compile Include="AssemblyLoaderTest.cs" />
     <Compile Include="AssemblyHelperTest.cs" />
     <Compile Include="AppDomainHelperTest.cs" />
+    <Compile Include="ReflectionHelperTest.Method.cs" />
+    <Compile Include="TypesForTesting\InterfaceTestTypes.cs" />
     <Compile Include="TypesForTesting\NullAndNotNullFields.cs" />
     <Compile Include="TypesForTesting\NullAndNotNullProperties.cs" />
     <Compile Include="TypesForTesting\Attributes.cs" />
